@@ -1,3 +1,7 @@
+2013-02-04  Alan Modra  <amodra@gmail.com>
+
+	* ti.h (SWAP_OUT_RELOC_EXTRA): Define.
+
 2013-01-02  Martin Storsjo <martin@martin.st>
 
 	* arm.h (ARMV7PEMAGIC): Define.
